--- a/style.css
+++ b/style.css
@@ -105,16 +105,30 @@ body * {
 
 .card ul li strong,
 .card ul li img {
-  transition: transform 0.3s;
+  transition: transform 0.2s;
 }
 
 .card{
-  animation: appear .7s;
+  opacity: 0;
+  animation: appear .2s forwards;
+}
+
+.card:nth-child(1){
+  animation-delay: .2s;
+}
+
+.card:nth-child(2){
+  animation-delay: .4s;
+}
+
+.card:nth-child(3){
+  animation-delay: .6s;
 }
 
 @keyframes appear {
   0% {
     opacity: 0;
+    transform: translateY(-50px);
   }
 
   100% {
