--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+/* cores primárias */
+:root{
+  --card-color-primary:#f7dd43;
+}
+
+
+
 ul {
   list-style: none;
 }
@@ -113,7 +120,7 @@ body * {
   animation: appear .2s forwards;
 }
 
-.card:nth-child(1){
+/* .card:nth-child(1){
   animation-delay: .2s;
 }
 
@@ -123,16 +130,31 @@ body * {
 
 .card:nth-child(3){
   animation-delay: .6s;
-}
+} */
 
 @keyframes appear {
   0% {
-    opacity: 0;
+    
     transform: translateY(-50px);
+    opacity: 0;
   }
 
   100% {
     opacity: 1;
   }
 
+}
+
+
+/* responsividade */
+
+@media (min-width:600px){
+   #cards{
+    max-width: 670px;
+    flex-direction: row;
+    /* qdo o item ultrapassar a largura máxima o proximo item ira para baixo */
+    flex-wrap:wrap;
+
+
+  }
 }
