--- a/style.css
+++ b/style.css
@@ -8,12 +8,24 @@
 :root{
   --card-color-primary:#f7dd43;
   --card-border-color: #746615;
+  --card-bg-color:#121214;
+  --bg: url(./assets/bg-yellow.svg)
+
 }
 /* cores dinamicas */
 body.blue{
   --card-color-primary:#338af3;
   --card-border-color: #338af3;
+  --card-bg-color:#202024;
+  --bg: url(./assets/bg-blue.svg)
 }
+body.green{
+  --card-color-primary:#047c3f;
+  --card-border-color: #047c3f;
+  --card-bg-color:#1a1f1b;
+  --bg: url(./assets/bg-green.svg)
+}
+
 
 
 ul {
@@ -47,7 +59,7 @@ header {
 .card {
   padding: 32px 23px;
   text-align: center;
-  background: #1d1c19;
+  background: var(--card-bg-color);
   border-bottom: 2px solid var(--card-color-primary);/*var que é colocada no root*/
   border-radius: 6px;
 }
