--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ body.blue{
   --card-color-primary:#338af3;
   --card-border-color: #338af3;
   --card-bg-color:#202024;
-  --bg: url(./assets/bg-blue.svg) 
+  --bg: url(/assets/bg-blue.svg) 
 }
 body.green{
   --card-color-primary:#047c3f;
   --card-border-color: #047c3f;
   --card-bg-color:#1a1f1b;
-  --bg: url(./assets/bg-green.svg)
+  --bg: url(/assets/bg-green.svg)
 }
 
 
@@ -34,7 +34,7 @@ ul {
 
 body {
   background-color: #121214;
-  background-image: url(./assets/bg.svg);
+  background-image: url(/assets/bg.svg);
   background-position: top center;
  background-repeat: no-repeat;
  background-size: cover;
